0x07-python-test_driven_development/tests/3-say_my_name.txt
The ``3-say_my_name`` module
==================================
This module contains the function say_my_name:

Using ``say_my_name``
------------------------

First import
~~~~~~~~~~~
First import ``say_my_name`` from the ``3-say_my_name.py`` module. Since the file name contains a numeral, you can't use the simple ``from 3-say_my_name.py import say_my_name``. You can instead use the following syntax:

    >>> say_my_name = __import__('3-say_my_name').say_my_name

Usage:
The function takes in two strings  first_name & last_name.
    say_my_name('Emmy', 'Chebet')
    My name is Emmy Chebet

  only one name (space before newline):
    >>> say_my_name('Emmy')
    My name is Emmy


  Exceptions
  If first name string argument is not a string, a TypeError of "first_name must be a string" will arise.
  Equally "last_name must be a string" for the last name argument.

first name is not a string:
    >>> say_my_name(5983, 'Korir')
    Traceback (most recent call last):
        ...
    TypeError: first_name must be a string

only name (treated as first) is not a string:
    >>> say_my_name(1996)
    Traceback (most recent call last):
        ...
    TypeError: first_name must be a string

last name is not a string:
    >>> say_my_name('Jackson', 12345)
    Traceback (most recent call last):
        ...
    TypeError: last_name must be a string
